force-app/main/default/objects/DCS_API_Token__c/DCS_API_Token__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>CDCS-184 - access token for OCH API and AWS statement generator</description>
    <label>DCS API Token</label>
</CustomObject>