force-app/main/default/objects/DCS_API_Token__c/fields/Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Time__c</fullName>
    <description>CDCS-184 timestamp when token was last refreshed</description>
    <inlineHelpText>Timestamp when token was last refreshed</inlineHelpText>
    <label>Created Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>