force-app/main/default/objects/DCS_API_Token__c/fields/Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token__c</fullName>
    <description>CDCS-184 refresh token</description>
    <label>Refresh Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>